--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1506,6 +1506,26 @@ section {
   box-shadow: none;
   font-size: 14px;
 }
+.myButton {
+	background-color:transparent;
+	border-radius:28px;
+	border:1px solid #19e82e;
+	display:inline-block;
+	cursor:pointer;
+	color:#31c439;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:transparent;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 
 .contact .php-email-form input {
   height: 44px;
